--- a/AISAlert/src/main/webapp/index.html
+++ b/AISAlert/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script language="JavaScript">
             redirTime = 2;
-            redirURL = "/aisalert/MapServlet.do";
+            redirURL = "/aisalert/mainpage.do";
             function redirTimer() {
                 self.setTimeout("self.location.href = redirURL;", redirTime);
             }
